--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -40,7 +40,7 @@
             android:text="@string/celsius_to_fahrenheit"
             android:layout_marginLeft="200dp"
 
-            />
+            tools:ignore="RtlHardcoded" />
 
     </RadioGroup>
 
@@ -61,7 +61,8 @@
 
 
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintHorizontal_bias="0.0"
+        tools:ignore="RtlHardcoded" />
 
 
     <Button
