--- a/app/src/main/res/layout/activity_logs.xml
+++ b/app/src/main/res/layout/activity_logs.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,8 +10,8 @@
         android:id="@+id/title"
         android:layout_width="0dp"
         android:layout_height="64dp"
-        android:gravity="center"
         android:background="@color/converter_title_bg"
+        android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -30,15 +29,23 @@
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/log_tv"
-        android:layout_margin="16dp"
+    <ScrollView
         android:layout_width="0dp"
-        android:layout_height="579dp"
-        android:textSize="18sp"
+        android:layout_height="0dp"
+        android:layout_margin="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title"/>
+        app:layout_constraintTop_toBottomOf="@+id/title">
+
+        <TextView
+            android:id="@+id/log_tv"
+            android:layout_width="match_parent"
+            android:textColor="@android:color/background_dark"
+            android:layout_height="match_parent"
+            android:textSize="18sp"
+            />
+    </ScrollView>
 
 
 </android.support.constraint.ConstraintLayout>
